--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,16 @@
-#player1 {
+div .container {
+    background: rgb(162, 162, 209);
+    width: 100%;
+    height: 100%;
+}
+
+#player {
     border: solid rgb(89, 7, 97);
     background: rgb(89, 7, 97);
     position: absolute;
     height: 20%;
     width: 10%;
-    top: 50%;
-    left: 20%;
-    transform: translate(-50%, -50%);
+    top: 400;
+    left: 200;
+
 }
